--- a/media/Media_Engine/Media_Engine/CMakeLists.txt
+++ b/media/Media_Engine/Media_Engine/CMakeLists.txt
@@ -1,10 +1,8 @@
 ﻿# ./CMakeLists.txt
 
-project(Media_Engine)
-
 # boost_library
-set (BOOST_ROOT "C:\\Users\\SeonghoJang\\Desktop\\Media_Engine\\boost_1_84_0")
-set (BOOST_LIBRARY_DIR "C:\\Users\\SeonghoJang\\Desktop\\Media_Engine\\boost_1_84_0\\stage\\lib")
+set (BOOST_ROOT "C:\\Users\\SeonghoJang\\Desktop\\video_streaming\\media\\Media_Engine\\boost_1_84_0")
+set (BOOST_LIBRARY_DIR "C:\\Users\\SeonghoJang\\Desktop\\video_streaming\\media\\Media_Engine\\boost_1_84_0\\stage\\lib")
 set (BOOST_INCLUDE_DIR ${BOOST_ROOT})
 
 include_directories(${BOOST_INCLUDE_DIR} include)
@@ -22,5 +20,3 @@ message(${CMAKE_SOURCE_DIR})
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET Media_Engine PROPERTY CXX_STANDARD 20)
 endif()
-
-# TODO: 필요한 경우 테스트를 추가하고 대상을 설치합니다.
